--- a/views/artist_list.jade
+++ b/views/artist_list.jade
@@ -2,7 +2,7 @@ extends layout
 
 block content 
 
-    h1 #[strong Artist List] 
+    h1=title
         
         ul
             each a in artists 
