--- a/views/genre_form.jade
+++ b/views/genre_form.jade
@@ -6,7 +6,7 @@ block content
   form(method='POST' action='')
     div.form-group
       label(for='name') Genre:
-      input#name.form-control(type='text', placeholder='Fantasy, Poetry etc.' name='name' value=(undefined===genre ? '' : genre.name))
+      input#name.form-control(type='text', placeholder='Rock, Pop etc.' name='name' value=(undefined===genre ? '' : genre.name))
       label(for='description') Description: 
       label(for="description") Description:
       textarea#description.form-control(type='text', placeholder='Description', name='description', value=(undefined === artist ? '' : genre.description))
