--- a/views/genre_form.jade
+++ b/views/genre_form.jade
@@ -5,11 +5,12 @@ block content
 
   form(method='POST' action='')
     div.form-group
+
       label(for='name') Genre:
-      input#name.form-control(type='text', placeholder='Rock, Pop etc.' name='name' value=(undefined===genre ? '' : genre.name))
+      input#name.form-control(type='text', placeholder='Pop, Rock, etc' name='name' value=(undefined===genre ? '' : genre.name))
+
       label(for='description') Description: 
-      label(for="description") Description:
-      textarea#description.form-control(type='text', placeholder='Description', name='description', value=(undefined === artist ? '' : genre.description))
+      textarea#description.form-control(type='text', placeholder='Description', name='description') #{undefined === genre ? '' : genre.description}
     button.btn.btn-primary(type='submit') Submit
 
   if errors
