add vinyl form + fix typos

--- a/views/artist_form.jade
+++ b/views/artist_form.jade
@@ -17,7 +17,7 @@ block content
             label(for="image") Image:
             input#image.form-control(type='file', name='image') 
 
-        button(type='submit') Submit
+        button.btn.btn-primary(type='submit') Submit
 
       if errors
         ul
