--- a/views/layout.jade
+++ b/views/layout.jade
@@ -31,7 +31,7 @@ html(lang='en')
               li
                 a(href='/catalog/genre/create') Upload new genre
               li
-                a(href='/catalog/vynil/create') Upload new vynil
+                a(href='/catalog/vinyl/create') Upload new vynil
               li
                 a(href='/catalog/copy/create') Sell your vynil
 
