--- a/views/artist_form.jade
+++ b/views/artist_form.jade
@@ -14,8 +14,9 @@ block content
             label(for="description") Description:
             textarea#description.form-control(type='text', placeholder='Description', name='description') #{undefined === artist ? '' : artist.description}
 
-            label(for="image") Image:
-            input#image.form-control(type='file', name='image') 
+            if !artist 
+                label(for="image") Image:
+                input#image.form-control(type='file', name='image') 
 
         button.btn.btn-primary(type='submit') Submit
 
