--- a/views/genre_detail.jade
+++ b/views/genre_detail.jade
@@ -16,7 +16,7 @@ block content
                 a(href=v.url) #{v.vinyl_name}
             p #[strong Artist:]
                 a(href=v.artist.url) #{v.artist.artist_name}
-            p #[strong Year of Release:] #{v.year_of_release}
+            p #[strong Year of Release:] #{v.formatted_date}
             img(src="http://localhost:3000/" + v.cover, alt=v.vinyl_name)  
     else
         p There are no vynils related to this artist
