add delete POST

--- a/views/copy_detail.jade
+++ b/views/copy_detail.jade
@@ -4,7 +4,7 @@ block content
     h1=title
 
     p #[strong Copy:]
-        a(href=copy.url) #{copy.copy_name}
+        a(href=copy.vinyl.url) #{copy.vinyl.vinyl_name}
     p #[strong Year] #{copy.year}
     p #[strong Released By:] #{copy.released_by}
     p #[strong Released In:] #{copy.released_in}
