--- a/views/vinyl_list.jade
+++ b/views/vinyl_list.jade
@@ -3,10 +3,11 @@ extends layout
 block content
   h1= title
 
-  ul
+  ul(style="display: grid; grid-template-rows: 1fr; grid-template-columns: 1fr")
     each vinyl in vinyls
-      li
-        a(href=vinyl.url) #{vinyl.vinyl_name}
+      li(style="margin: 1%")
+        img(src="http://localhost:3000/" + vinyl.cover, alt=vinyl.vinyl_name style=('width: 128px; height: 128px'))
+        a(href=vinyl.url style="padding-left: 2%") #{vinyl.vinyl_name}
         |  (#{vinyl.artist.artist_name})
 
     else
