--- a/views/artist_list.jade
+++ b/views/artist_list.jade
@@ -8,7 +8,7 @@ block content
             each a in artists 
                 li(style="display: flex; flex-direction: row; margin: 2% 0")
                     div
-                        img(src="http://localhost:3000/" + a.image, alt="Artist Image" style=('width: 128px; height: 128px'))
+                        img(src="http://localhost:3000/" + a.image, alt="Artist Image" style=("width: 240px; height: 240px"))
                     div(style="padding-left: 2%")
                         p.lead Artist:
                             a(href=a.url) #{a.artist_name} 
